// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <LinkBar
      className=""
      withoutGap={false}
    >
      <div
        className=""
      >
        <Item
          activeClassName=""
          className=""
          exact={false}
          to="/link-1"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            to="/link-1"
          >
            <Route
              exact={false}
              path="/link-1"
            >
              <Link
                aria-current={false}
                className=""
                replace={false}
                to="/link-1"
              >
                <a
                  aria-current={false}
                  className=""
                  href="/link-1"
                  onClick={[Function]}
                >
                  Link 1
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
        <Item
          activeClassName=""
          className=""
          exact={false}
          to="/link-2"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            to="/link-2"
          >
            <Route
              exact={false}
              path="/link-2"
            >
              <Link
                aria-current={false}
                className=""
                replace={false}
                to="/link-2"
              >
                <a
                  aria-current={false}
                  className=""
                  href="/link-2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
        <Item
          activeClassName=""
          className=""
          exact={false}
          to="/link-3"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            to="/link-3"
          >
            <Route
              exact={false}
              path="/link-3"
            >
              <Link
                aria-current={false}
                className=""
                replace={false}
                to="/link-3"
              >
                <a
                  aria-current={false}
                  className=""
                  href="/link-3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
      </div>
    </LinkBar>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly with active item 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <LinkBar
      className=""
      withoutGap={false}
    >
      <div
        className=""
      >
        <Item
          activeClassName=""
          className=""
          exact={false}
          isActive={[Function]}
          to="/link-1"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            isActive={[Function]}
            to="/link-1"
          >
            <Route
              exact={false}
              path="/link-1"
            >
              <Link
                aria-current="true"
                className=""
                replace={false}
                style={Object {}}
                to="/link-1"
              >
                <a
                  aria-current="true"
                  className=""
                  href="/link-1"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Link 1
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
        <Item
          activeClassName=""
          className=""
          exact={false}
          to="/link-2"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            to="/link-2"
          >
            <Route
              exact={false}
              path="/link-2"
            >
              <Link
                aria-current={false}
                className=""
                replace={false}
                to="/link-2"
              >
                <a
                  aria-current={false}
                  className=""
                  href="/link-2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
        <Item
          activeClassName=""
          className=""
          exact={false}
          to="/link-3"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            to="/link-3"
          >
            <Route
              exact={false}
              path="/link-3"
            >
              <Link
                aria-current={false}
                className=""
                replace={false}
                to="/link-3"
              >
                <a
                  aria-current={false}
                  className=""
                  href="/link-3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
      </div>
    </LinkBar>
  </Router>
</MemoryRouter>
`;

exports[`renders correctly without bottom gap 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <LinkBar
      className=""
      withoutGap={true}
    >
      <div
        className="undefined"
      >
        <Item
          activeClassName=""
          className=""
          exact={false}
          to="/link-1"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            to="/link-1"
          >
            <Route
              exact={false}
              path="/link-1"
            >
              <Link
                aria-current={false}
                className=""
                replace={false}
                to="/link-1"
              >
                <a
                  aria-current={false}
                  className=""
                  href="/link-1"
                  onClick={[Function]}
                >
                  Link 1
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
        <Item
          activeClassName=""
          className=""
          exact={false}
          to="/link-2"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            to="/link-2"
          >
            <Route
              exact={false}
              path="/link-2"
            >
              <Link
                aria-current={false}
                className=""
                replace={false}
                to="/link-2"
              >
                <a
                  aria-current={false}
                  className=""
                  href="/link-2"
                  onClick={[Function]}
                >
                  Link 2
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
        <Item
          activeClassName=""
          className=""
          exact={false}
          to="/link-3"
        >
          <NavLink
            activeClassName=""
            ariaCurrent="true"
            className=""
            exact={false}
            to="/link-3"
          >
            <Route
              exact={false}
              path="/link-3"
            >
              <Link
                aria-current={false}
                className=""
                replace={false}
                to="/link-3"
              >
                <a
                  aria-current={false}
                  className=""
                  href="/link-3"
                  onClick={[Function]}
                >
                  Link 3
                </a>
              </Link>
            </Route>
          </NavLink>
        </Item>
      </div>
    </LinkBar>
  </Router>
</MemoryRouter>
`;
